packages/components/pagination/style/index.less
@import '../../style/mixins/reset.less';
@import './mixin.less';

.@{pagination-prefix} {
  .reset-component();

  display: flex;

  &-item,
  &-total,
  &-jumper {
    display: inline-block;
  }

  &-total {
    margin-right: 8px;
  }

  &-sizes,
  &-jumper {
    margin-left: 8px;
  }

  &-sizes {
    display: inline-flex;

    &-select-wrapper {
      flex: auto;
      margin: 0 4px;
      min-width: 64px;
    }
  }

  &-item,
  &-jumper {
    .@{idux-prefix}-input {
      margin: 0 4px;
      width: 40px;
    }
  }

  &-item {
    .@{button-prefix} {
      transition: none;
    }

    &-slash {
      margin: 0 4px;
    }

    &-jumper {
      .@{button-prefix} {
        display: none;
      }

      .@{pagination-prefix}-item-ellipsis {
        display: inline-block;
      }

      &:hover {
        .@{button-prefix} {
          display: inline-block;
        }

        .@{pagination-prefix}-item-ellipsis {
          display: none;
        }
      }
    }

    &-active {
      .@{button-prefix} {
        color: @pagination-item-active-color;
        background-color: @pagination-item-active-background-color;
      }

      .@{button-prefix}.@{button-prefix}-disabled {
        color: @pagination-item-disabled-color;
        background-color: @pagination-item-disabled-background-color;
      }
    }

    &-button {
      .@{button-prefix}:not(.@{button-prefix}-disabled) {
        &:hover {
          color: @pagination-item-button-hover-color;
          background-color: @pagination-item-button-hover-background-color;
        }
        &:focus {
          color: @pagination-item-button-active-color;
        }
      }
    }
  }

  &-item:not(&-item-active):not(&-item-button) {
    .@{button-prefix}:hover:not(.@{button-prefix}-disabled) {
      color: @pagination-item-color;
      background-color: @pagination-item-hover-background-color;
    }
  }

  &-total {
    color: @pagination-total-color;
  }

  &-sizes,
  &-jumper {
    color: @pagination-sizes-color;
  }

  &-md {
    .pagination-size(@pagination-font-size-md, @pagination-item-size-md, @pagination-item-padding-md);
  }

  &-sm {
    .pagination-size(@pagination-font-size-sm, @pagination-item-size-sm, @pagination-item-padding-sm);
  }
}

